--- a/facerecognition/pom.xml
+++ b/facerecognition/pom.xml
@@ -8,6 +8,7 @@
   <packaging>jar</packaging>
 
 
+
   <name>facerecognition</name>
   <url>http://maven.apache.org</url>
 
@@ -18,6 +19,7 @@
         <dl4j.version>0.4-rc3.8</dl4j.version>
         <opencv.version>3.0.0</opencv.version>
         <canova.version>0.0.0.14</canova.version>
+        <maven.version>3.3.9</maven.version>
     </properties>
 
 
@@ -47,13 +49,21 @@
           <version>${canova.version}</version>
       </dependency>
 
-
-
-
-
-
-
   </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+
 </project>
 
 
